# yatta

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
yatta/: Cargo.toml
yatta-core/: Cargo.toml
yatta-core/src/: lib.rs
yatta/bindings/: Cargo.toml  build.rs
yatta/src/: desktop.rs  main.rs  message_loop.rs  rect.rs  window.rs  windows_event.rs  workspace.rs
yattac/: Cargo.toml
yattac/src/: main.rs
