[package]
name = "yatta-core"
version = "0.1.0"
authors = ["Jade Iqbal"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
clap = "3.0.0-beta.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.20", features = ["derive"] }
