[package]
name = "yatta"
version = "0.1.0"
authors = ["Jade Iqbal"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bindings = { package = "bindings", path = "bindings" }
yatta-core = { path = "../yatta-core" }

anyhow = "1.0.38"
bitflags = "1.2.1"
crossbeam-channel = "0.5.0"
dirs = "3.0.1"
enigo = "0.0.14"
flexi_logger = "0.17"
lazy_static = "1.4.0"
log = "0.4"
num-derive = "0.3"
num-traits = "0.2"
strum = { version = "0.20", features = ["derive"] }
sysinfo = "0.16.3"
uds_windows = "1.0"