[package]
name = "yattac"
version = "0.1.0"
authors = ["Jade Iqbal"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yatta-core = { path = "../yatta-core" }

clap = "3.0.0-beta.2"
dirs = "3.0.1"
powershell_script = "0.1.5"
uds_windows = "1.0.1"